--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
      "validator": "^13.12.0"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node server.js"
   },
   "name": "backend",
   "version": "1.0.0",
