--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+     "fs": "^0.0.1-security",
     "googleapis": "^140.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
@@ -19,6 +20,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+     "pdfkit": "^0.15.0",
     "razorpay": "^2.9.4",
      "validator": "^13.12.0"
   },
